fix: sidebar and scrollbar

--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -235,7 +235,11 @@ html[data-theme=light] {
 }
 
 html[data-reading-mode="true"] {
-    .scrollbar-hidden {
-        visibility: hidden;
-    }
+  .scrollbar-hidden {
+    visibility: hidden;
+  }
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
